# Clippycap

./: .gitignore  ARCHITECTURE.md  Clippycap.bat  LICENSE  LINKERS.md  README.md  THIRD_PARTY_NOTICES.txt  build.ps1  pyproject.toml
config/: default.toml
packaging/: README.md  build.ps1  clippycap.spec  clippycap_entry.py  get_ffmpeg.ps1  installer.iss
src/clippycap/: __init__.py  __main__.py
src/clippycap/api/: app.py
src/clippycap/app/: bootstrap.py  config_service.py  editing_service.py  ffmpeg_service.py  jobs.py  linker_runner.py  linker_service.py  reference_service.py  scan_service.py  services.py  source_service.py  update_service.py
src/clippycap/app/linking/: __init__.py  engine.py  extract.py  predicates.py  presets.py  resolve.py  steps.py  template.py  types.py  values.py
src/clippycap/core/: entities.py  errors.py  events.py  ports.py  query.py
src/clippycap/infra/config/: __init__.py  loader.py  schema.py
src/clippycap/infra/db/: database.py  repositories.py  schema.py
src/clippycap/infra/media/: ffmpeg.py  ffmpeg_install.py  video_editor.py  video_metadata.py  video_thumbnail.py
src/clippycap/infra/scan/: enricher.py  hashing.py  identity_upgrade.py  reconciler.py  scanner.py  walker.py
src/clippycap/media_types/video/: video_media_type.py
src/clippycap/plugins_runtime/: context.py  discovery.py  event_bus.py  registries.py
src/clippycap/shell/: cli.py
tests/: test_api.py  test_app.py  test_app2.py  test_bootstrap.py  test_config.py  test_core.py  test_db.py  test_ffmpeg_install.py  test_media.py  test_plugins_runtime.py  test_scan.py  test_scanner.py  test_shell.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: Pager.svelte  TitleBar.svelte  WindowControls.svelte  api.ts
web/src/lib/linkers/: LinkedFilesPanel.svelte  LinkerBuilder.svelte  LinkersPage.svelte  defs.ts
