[project]
name = "clippycap"
version = "0.0.0"
description = "Local, extensible media library + annotation tool (gameplay-clip review and more)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "blake3>=0.4",
    "tomli_w>=1.0",         # writes <data_dir>/local.toml when the user edits settings in the UI
    # NOTE: ffmpeg/ffprobe are NOT Python packages — they are native binaries bundled
    # at packaging time (see packaging/). The "no-ffmpeg" fallback needs no extra deps.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # for testing the FastAPI app
    "ruff>=0.5",
    "mypy>=1.10",
]
# Optional: a native desktop window via pywebview (`pip install .[window]`). Without it the launcher
# uses a chromeless Edge/Chrome "--app" window, or falls back to a normal browser tab. On Windows it
# also needs the Edge WebView2 runtime, and pywebview's pythonnet dep has no wheels for Python 3.14 yet.
window = ["pywebview>=5.1"]
build = ["pyinstaller>=6.0"]    # bundle a standalone .exe -- see packaging/

[project.scripts]
clippycap = "clippycap.shell.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clippycap"]

# --- tooling ---------------------------------------------------------------

[tool.ruff]
src = ["src", "tests"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "E501", "F841", "RUF059"]   # tests assign/unpack and carry long inline data freely

[tool.ruff.lint.pylint]
max-args = 8        # DI'd services and entities with many fields carry several parameters
max-branches = 15   # query builders that translate many optional filters are legitimately branchy

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["clippycap"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
